--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,12 @@
   <body>
     <script src="scripts/Tone.min.js" type="application/javascript"></script>
     <script src="scripts/tuna-min.js" type="application/javascript"></script>
-    <script src="./main.js" type="module"></script>
+    <script src="./main.js" type="application/javascript"></script>
+    <!--
+      Didn't wan't to monkeypatch Tone.js or Tuna.js, so they are included as
+      scripts instead of ES6 modules. Hopefully deno.js will make hosting ES6
+      modules less problematic :(
+    -->
   </body>
 </html>
 
