potentially initial commit

--- a/index-template.html
+++ b/index-template.html
@@ -7,7 +7,7 @@
   <body>
     <script src="./main.js" type="application/javascript"></script>
     <!--
-      Didn't wan't to monkeypatch Tone.js or Tuna.js, so they are included as
+      Didn't want to monkeypatch Tone.js or Tuna.js, so they are included as
       scripts instead of ES6 modules. Hopefully deno.js will make hosting ES6
       modules less problematic :(
     -->
